# simplechatclient

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COMPILE-WIN32-en.txt  COMPILE-WIN32-pl.txt  ChangeLog  README  README.md  README.rst  TODO  add-scc-to-whitelist.sh  clear.bat  clear.sh  compile.bat  compile.sh  compile_mingw.bat  debug.sh  en_US.dic  exclude.txt  pl_PL.dic  scc-config.h.cmake  scc.desktop  scc.nsi  scc.pro  scc.qrc  scc_mingw.rc
build-linux/: compile.sh  create_md5.sh
build-windows/: scc.nsi
emoticons/: LICENSE
i18n/: CMakeLists.txt  qt_pl.ts  scc_pl.ts
scripts/: chat.js
sounds/: LICENSE
src/: .gitignore  CMakeLists.txt  channel_avatar.cpp  channel_avatar.h  commands.cpp  commands.h  config.cpp  config.h  crypt.cpp  crypt.h  debug.cpp  debug.h  dlg_about.cpp  dlg_about.h  dlg_cam.cpp  dlg_cam.h  dlg_channel_favourites.cpp  dlg_channel_favourites.h  dlg_channel_favourites_ad.cpp  dlg_channel_favourites_ad.h  dlg_channel_homes.cpp  dlg_channel_homes.h  dlg_channel_homes_ad.cpp  dlg_channel_homes_ad.h  dlg_channel_key.cpp  dlg_channel_key.h  dlg_channel_list.cpp  dlg_channel_list.h  dlg_channel_settings.cpp  dlg_channel_settings.h  dlg_email.cpp  dlg_email.h  dlg_friends.cpp  dlg_friends.h  dlg_friends_ad.cpp  dlg_friends_ad.h  dlg_ignore.cpp  dlg_ignore.h  dlg_ignore_ad.cpp  dlg_ignore_ad.h  (+52 more)
src/avatars/: avatar.cpp  avatar.h  channel_avatar.cpp  channel_avatar.h  nick_avatar.cpp  nick_avatar.h
src/common/: awaylogs.cpp  awaylogs.h  commands.cpp  commands.h  config.cpp  config.h  convert.cpp  convert.h  crypt.cpp  crypt.h  html_messages_renderer.cpp  html_messages_renderer.h  kamerzysta.cpp  kamerzysta.h  log.cpp  log.h  mpris_player.cpp  mpris_player.h  replace.cpp  replace.h  simple_crypt.cpp  simple_crypt.h  video.cpp  video.h  webcam_engine.cpp  webcam_engine.h  webcam_network.cpp  webcam_network.h  winamp.cpp  winamp.h  xml.cpp  xml.h
src/core/: core.cpp  core.h  debug.cpp  debug.h  debug_block.cpp  debug_block.h  debugblock.cpp  debugblock.h  defines.h  main.cpp  mainwindow.cpp  mainwindow.h  message.cpp  network.cpp  network.h  network_thread.cpp  network_thread.h  nicklist.cpp  nicklist.h  singleapplication.cpp  singleapplication.h  tray.cpp  tray.h  update.cpp  update.h  update_thread.cpp  update_thread.h  updates.cpp  updates.h
src/debug/: debug.cpp  debug_block.cpp  debug_block.h  linux_debug.cpp  linux_debug.h
src/gui/: about.cpp  about.h  about_gui.cpp  about_gui.h  avatar_edit.cpp  avatar_edit.h  avatar_edit_gui.cpp  avatar_edit_gui.h  awaylog.cpp  awaylog.h  awaylog_gui.cpp  awaylog_gui.h  captcha.cpp  captcha.h  captcha_gui.cpp  captcha_gui.h  channel_favourites.cpp  channel_favourites.h  channel_favourites_gui.cpp  channel_favourites_gui.h  channel_homes.cpp  channel_homes.h  channel_homes_gui.cpp  channel_homes_gui.h  channel_key.cpp  channel_key.h  channel_key_gui.cpp  channel_key_gui.h  channel_list.cpp  channel_list.h  channel_list_gui.cpp  channel_list_gui.h  channel_settings.cpp  channel_settings.h  channel_settings_gui.cpp  channel_settings_gui.h  dlg_about.cpp  dlg_about.h  dlg_awaylog.cpp  dlg_awaylog.h  (+184 more)
src/models/: autoaway.cpp  autoaway.h  avatar.cpp  avatar.h  away.cpp  away.h  awaylog.cpp  awaylog.h  busy.cpp  busy.h  cache.cpp  cache.h  channel.cpp  channel.h  channel_favourites.cpp  channel_favourites.h  channel_favourites_model.cpp  channel_favourites_model.h  channel_homes.cpp  channel_homes.h  channel_homes_model.cpp  channel_homes_model.h  channel_list.cpp  channel_list.h  channel_list_model.cpp  channel_list_model.h  channel_settings.cpp  channel_settings.h  channel_settings_model.cpp  channel_settings_model.h  emoticons.cpp  emoticons.h  find_nick.cpp  find_nick.h  find_nick_model.cpp  find_nick_model.h  friends.cpp  friends.h  friends_model.cpp  friends_model.h  (+55 more)
src/notify/: notify.cpp  notify.h  qnotify.cpp  qnotify.h
src/onet/: avatar_client.cpp  avatar_client.h  captcha.cpp  captcha.h  dlg_captcha.cpp  dlg_captcha.h  my_avatar_model.cpp  my_avatar_model.h  onet_auth.cpp  onet_auth.h  onet_avatar.cpp  onet_avatar.h  onet_kernel.cpp  onet_kernel.h  onet_utils.cpp  onet_utils.h
src/singleton/: autoaway.cpp  autoaway.h  avatar.cpp  avatar.h  away.cpp  away.h  awaylog_model.cpp  awaylog_model.h  busy.cpp  busy.h  channel.cpp  channel.h  channel_favourites_model.cpp  channel_favourites_model.h  channel_homes_model.cpp  channel_homes_model.h  channel_list_model.cpp  channel_list_model.h  channel_settings_model.cpp  channel_settings_model.h  find_nick_model.cpp  find_nick_model.h  friends_model.cpp  friends_model.h  highlight.cpp  highlight.h  ignore_model.cpp  ignore_model.h  invite_model.cpp  invite_model.h  lag.cpp  lag.h  message.cpp  message.h  moderation_model.cpp  moderation_model.h  my_profile_model.cpp  my_profile_model.h  my_stats_model.cpp  my_stats_model.h  (+28 more)
src/tab/: tab_container.cpp  tab_container.h  tab_manager.cpp  tab_manager.h  tab_widget.cpp  tab_widget.h
src/widgets/: animatedemoticonwidget.cpp  animatedemoticonwidget.h  avatar_edit_scene.cpp  avatar_edit_scene.h  avatar_list_widget.cpp  avatar_list_widget.h  chat_view.cpp  chat_view.h  chatview.cpp  chatview.h  highlighter.cpp  highlighter.h  input_widget.cpp  input_widget.h  inputline.cpp  inputline.h  inputline_dock_widget.cpp  inputline_dock_widget.h  inputline_widget.cpp  inputline_widget.h  inputlinedockwidget.cpp  inputlinedockwidget.h  inputlinewidget.cpp  inputlinewidget.h  inputwidget.cpp  inputwidget.h  maintextedit.cpp  maintextedit.h  mainwebview.cpp  mainwebview.h  nicklist.cpp  nicklist.h  nicklist_delegate.cpp  nicklist_delegate.h  nicklist_widget.cpp  nicklist_widget.h  nicklistdelegate.cpp  nicklistdelegate.h  nicklistdockwidget.cpp  nicklistdockwidget.h  (+23 more)
tests/: CMakeLists.txt
translations/: .gitignore  CMakeLists.txt  qt_pl.ts  scc_pl.ts
ui/: about.ui  avatar_edit.ui  avatar_list_widget.ui  awaylog.ui  cam.ui  captcha.ui  channel_favourites.ui  channel_favourites_ad.ui  channel_homes.ui  channel_homes_ad.ui  channel_key.ui  channel_list.ui  channel_settings.ui  email.ui  emoticons.ui  find_nick.ui  (+32 more)
(+3 files in other folders)
